--- a/SharkGame_2/SharkGame_2/MainPage.xaml
+++ b/SharkGame_2/SharkGame_2/MainPage.xaml
@@ -10,28 +10,29 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Landscape" Orientation="Landscape"
+    SupportedOrientations="Landscape" Orientation="LandscapeLeft"
     shell:SystemTray.IsVisible="False">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot"  >
+        <Grid.Background>
+            <ImageBrush ImageSource="/SharkGame_2;component/Background.png" />
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28"></StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             
             <!--Create a single button to navigate to the second page which is rendered with the XNA Framework-->
-            <Button Height="100" Content="Change to game page" Click="Button_Click" />
-            
+            <Button Height="80" Content="Start game" Click="Button_Click" Margin="131,91,139,244" BorderBrush="White" Background="#3BEFEFEF" AllowDrop="False" />
+            <Button Height="80" Content="Options" Click="Button_Click" Margin="131,197,139,138" BorderBrush="White" Background="#3BEFEFEF" AllowDrop="False" />
+            <Button Content="Exit" Height="80" Margin="131,303,139,32" BorderBrush="White" Background="#3BEFEFEF" AllowDrop="False" />
         </Grid>
     </Grid>
  
